--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<head>
+<html>
+    <head>
+        
+    </head>
     <body>
         <h1>belajar git</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id voluptate, unde fugit ipsam rem debitis harum hic sint, mollitia rerum eveniet dolore iure vitae tempore perspiciatis dolor, voluptates quibusdam cumque.</p>
     </body>
-</head>
+</html>
